FROG CMS - Change Log

======
Sigla:
+ enhancement, addition
- bug fix
. other development
======

0.9.5 - released 2009-02-??

+ Added icon to directories in file_manager plugin - issue 140
+ Added Plugin::isEnabled($plugin_id) to Plugin class for plugin devs. (allows for basic plugin dependancies.)
+ Added getSetting(), setSetting(), getAllSettings() and setAllSettings() to Plugin class for plugin devs - issue 128
+ Added comments plugin option to display to-be-moderated comments on plugin tab (default true)
+ Added MySQL port to install screen. Thanks gilles.doge - issue 107
+ Added new events - issue 94
+ Added site identifiers to login screens (both login.php and forgot.php) based on Admin screen title setting.
+ Added front-end login feature similar to layout selector. (login required, not required, inherit)
+ Added drag-to-copy feature for better multi-language support. Thanks tuupola.
+ Added a new core plugin called skeleton to help out new plugin developers.
+ Added translation template generator to help out translators with translating Frog core and plugins.
+ Added Norwegian and Swedish core translations.
+ Added updated Chinese translation.
+ Removed split between frontend and backend.
+ Added an ID to the "view this page" link so it can be styled.
+ Added Danish translation for admin and file manager. Thanks Kenan.
- Fixed issue with page_requested event parameter not being backwards compatible - issue 141
- Fixed USE_MOD_REWRITE is undefined in case of system not yet being installed - issue 132
- Fixed issue with failed login redirecting to admin section once logged in. - issue 131
- Fixed issue with settings table. Changed table setting's field value to TEXT instead of VARCHAR.
- Fixed GET variables not being available in Frog's frontend. - issue 75
- Fixed issue where AutoLoader did not find file for 'PageArchiveMonthIndex' - issue 101
- Fixed issue where saving a page without title results in loss of entered content - issue 68